# rikerio-ethercat

./: .gitignore  .vimrc  CMakeLists.txt  README.md
build-tools/: Toolchain-arm.cmake
etc/: slave-config.yaml
include/: ec-slaves.h  ec-tools.h  ec_config.h  ecmap.h  ecyaml.h  sap.h  simpleec.h  slaves-cli.h
snap/: snapcraft.yaml
src/: ec-slaves.c  ec-tools.c  ec_config.c  ecyaml.c  help.c  main.c  map.c  master.c  rikerio.c  run.c  sap.c  scan.c  simpleec.c  slaves-cli.c  snake.c  start.c
